--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@mui/material": "^5.8.1",
     "@reduxjs/toolkit": "^1.8.2",
     "babel": "^6.23.0",
+    "editorjs-blocks-react-renderer": "^1.2.4",
+    "editorjs-html": "^3.4.2",
     "quill": "^1.3.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
